--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,5 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        diealect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
